--- a/client/index.html
+++ b/client/index.html
@@ -9,11 +9,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Form</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script type="module" src="src/index.jsx"></script>
     <div id="root"></div>
   </body>
 </html>
